--- a/Blockus-Client/View/ProfileConfigurationPage.xaml
+++ b/Blockus-Client/View/ProfileConfigurationPage.xaml
@@ -56,7 +56,7 @@
 
         <TextBlock Grid.Column="1" Text="{x:Static p:Resources.Configuration_settings}" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0, 15, 0, 0" Style="{StaticResource Title_Text}"/>
 
-        <StackPanel Grid.Column="1" Orientation="Vertical" Margin="15 30 0 0">
+        <StackPanel x:Name="StackPanel_Configuration" Grid.Column="1" Orientation="Vertical" Margin="15 30 0 0">
             <TextBlock Text="{x:Static p:Resources.Global_password}" Style="{StaticResource Subtitle_Text}" Foreground="{StaticResource PrimaryColor}"/>
             <Grid  Margin="0 20 0 0">
                 <TextBlock Text="* * * * * * * *" HorizontalAlignment="Left" Style="{StaticResource Title_Text}" VerticalAlignment="Center" Margin="0 0 20 0"/>
